Fixed broken styles on onsen themes.

--- a/themes/theme-modules/onsen/components/topcoat-navigation-bar.styl
+++ b/themes/theme-modules/onsen/components/topcoat-navigation-bar.styl
@@ -53,3 +53,6 @@
   font-weight var-font-weight--large
   color var-color--navigation-bar
 
+.topcoat-navigation-bar--bottom
+  border-bottom none
+  border-top var-border-bottom--navigation-bar
