--- a/themes/theme-modules/onsen/components/topcoat-notification.styl
+++ b/themes/theme-modules/onsen/components/topcoat-notification.styl
@@ -22,9 +22,9 @@
 .topcoat-notification
   @extend .notification
   padding: var-notification-padding;
-  width: var-notification-width;
+  min-width: var-notification-width;
   height: var-notification-height;
-  border-radius: var-notification-border-radius;
+  border-radius: @height
   background-color: var-notification-bg-color;
   color: var-notification-color;
 
