--- a/themes/theme-modules/onsen/components/topcoat-tab-bar.styl
+++ b/themes/theme-modules/onsen/components/topcoat-tab-bar.styl
@@ -26,6 +26,7 @@
   height: var-height--tab-bar;
   background-color var-background-color--tab-bar
   border-top var-border-top--tab-bar
+  width 100%
 }
 
 .topcoat-tab-bar__item {
@@ -53,6 +54,7 @@
   box-shadow var-box-shadow
   border-top: var-border;
   border-top: var-border--tab-bar__button;
+  width 100%
 }
 
 .topcoat-tab-bar__button:active,
